better logging for sp migration process (#25088)
* distupgrade better logging

* changelog